refactor: reestructuración completa según diagrama UML - 9 patrones implementados